# PrivacyStressApp

./: README.md  run_project.ps1
backend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: init.sql  schema.prisma
backend/src/: app.ts  config.ts  index.ts
backend/src/controllers/: adminController.ts  authController.ts  checkInController.ts  federatedController.ts
backend/src/docs/: openapi.ts
backend/src/domain/: questionnaire.ts
backend/src/middleware/: authMiddleware.ts
backend/src/routes/: adminRoutes.ts  authRoutes.ts  checkInRoutes.ts  federatedRoutes.ts
backend/src/services/: adminService.ts  authService.ts  bootstrapService.ts  checkInService.ts  derivationService.ts  encryptionService.ts  federatedService.ts  matrixService.ts  predictionService.ts  vectorService.ts
backend/src/types/: express-session.d.ts
backend/src/utils/: crypto.ts
mec/: DOCKER_DEMO.md  README.md  TOPICS.md  docker-compose.yml  plan_mec_federated_learning.md  start_demo.sh
mec/api/: Dockerfile  app.py  requirements.txt
mec/fl/: Dockerfile  aggregator.py  fl_service.py  requirements.txt
mec/scripts/: setup_local_env.sh  simulate_phone.py
mes/: README.md  plan_mec_federated_learning.md
mes/pir-mec/: DOCKER_DEMO.md  TOPICS.md  docker-compose.yml  start_demo.sh
mes/pir-mec/api/: app.py  requirements.txt
ml/: .gitignore  README.md  pyproject.toml
ml/app/: client_app.py  edge.py  models.py  personalized.py  privacy.py  server_app.py  task.py
research_paper/: .gitignore  research_paper.tex
ui/: .env  .gitignore  README.md  requirements.txt
ui/app/: main.py  theme.py
(+32 files in other folders)
